# bump

./: .gitignore  Cargo.toml  LICENSE  README.md  action.yml  bump.toml  install.sh
.cargo/: config.toml
.github/workflows/: build-and-publish.yml
docs/: CONFIGURATION.md  CONTRIBUTING.md  WORKFLOW.md
install/: get_bump.ps1  get_bump.sh
src/: bump.rs  bumpfile.rs  cli.rs  completions.rs  lang.rs  main.rs  print.rs  tests.rs  update.rs  version.rs
src/gen_tmpls/csharp/: semver.cs
src/templates/: bump.toml
src/templates/c/: calver.h  semver.h
src/templates/csharp/: calver.cs
src/templates/go/: calver.go  semver.go
src/templates/java/: calver.java  semver.java
src/templates/python/: calver.py  semver.py
src/tests/: calver.rs  codegen.rs  meta.rs  mod.rs  print.rs  semver.rs
tests/: lib.sh  malformed.sh  output.sh
tests/fixtures/malformed/: bad-label-position.toml  base-not-table.toml  invalid-toml.toml  missing-base.toml  missing-major.toml  missing-phase.toml  missing-prefix.toml  semver-with-calver-keys.toml  v6-calver.toml  v6-semver.toml  valid.toml
